--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -2,6 +2,9 @@ Localization
 {
 	en-us
 	{
+		#MechJeb_ModuleAreLocked = Some modules are disabled until you unlock the proper node in the R&D tree or upgrade the tracking station.
+		#MechJeb_OnlineManualbutton = Online Manual
+
 	//ManeuverPlaner
 
 		#MechJeb_Maneuver_Planner_title = Maneuver Planner
@@ -326,8 +329,6 @@ Localization
 		#MechJeb_Ascent_button16 = Launch at interplanetary window
 		#MechJeb_Ascent_button17 = Abort
 
-
-
 		#MechJeb_Ascent_label1 = Target Periapsis:
 		#MechJeb_Ascent_label2 = Target Apoapsis:
 		#MechJeb_Ascent_label3 = Ap < Pe: circularizing orbit
@@ -413,29 +414,387 @@ Localization
 		#MechJeb_AttitudeAdjust_Label9 = Arrows length
 		#MechJeb_AttitudeAdjust_Label10 = Radius of Sphere
 
-	//Custom Window Editor
+	//Custom Window Editor   
 		#MechJeb_WindowEd_title = Custom Window Editor
 		#MechJeb_WindowEd_Edtitle = Title:
 
+		#MechJeb_WindowEd_Presetname1 = Orbit Info
+		#MechJeb_WindowEd_Presetname2 = Surface Info
+		#MechJeb_WindowEd_Presetname3 = Vessel Info
+		#MechJeb_WindowEd_Presetname4 = Delta-V Stats
+		#MechJeb_WindowEd_Presetname5 = Ascent Stats
+		#MechJeb_WindowEd_Presetname6 = Rendezvous Info
+		#MechJeb_WindowEd_Presetname7 = Landing Info
+		#MechJeb_WindowEd_Presetname8 = Target Orbit Info
+		#MechJeb_WindowEd_Presetname9 = Stopwatch
+		#MechJeb_WindowEd_Presetname10 = Surface Navigation
+		#MechJeb_WindowEd_Presetname11 = Atmosphere Info
+		#MechJeb_WindowEd_Presetname12 = Maneuver Node Info
+
 		#MechJeb_WindowEd_button1 = New window
 		#MechJeb_WindowEd_button2 = Delete window
+		#MechJeb_WindowEd_button3 = Remove
+		#MechJeb_WindowEd_button4 = Move up
+		#MechJeb_WindowEd_button5 = Move down
 
 		#MechJeb_WindowEd_label1 = Show in: 
+		#MechJeb_WindowEd_label2 = Color:
+		#MechJeb_WindowEd_label3 = Window contents (click to edit):
+		#MechJeb_WindowEd_label4 = Click an item to add it to the info window:
+		#MechJeb_WindowEd_label5 = Window presets:
 
 
-		#MechJeb_WindowEd_checkbox1 = Flight
-		#MechJeb_WindowEd_checkbox2 = Editor
+		#MechJeb_WindowEd_checkbox1 = Flight //show window in flight
+		#MechJeb_WindowEd_checkbox2 = Editor //show windows in editor
+		#MechJeb_WindowEd_checkbox3 = Overlay
+		#MechJeb_WindowEd_checkbox4 = Locked
+		#MechJeb_WindowEd_checkbox5 = Compact
+		#MechJeb_WindowEd_checkbox6 = Text
+		#MechJeb_WindowEd_checkbox7 = Background
 
 		#MechJeb_WindowEd_CustomInfoWindow_title = Custom Info Window
 
 		#MechJeb_WindowEd_CustomInfoWindow_Label1 = Add items to this window with the custom window editor.
-		#MechJeb_WindowEd_CustomInfoWindow_Scrmsg = Configuration of <<1>> window copied to clipboard.
+		#MechJeb_WindowEd_CustomInfoWindow_Scrmsg1 = Configuration of <<1>> window copied to clipboard.
+		#MechJeb_WindowEd_CustomInfoWindow_Scrmsg2 = Pasted text wasn't a MechJeb custom window descriptor.
 
+	//Docking Autopilot
+		#MechJeb_Docking_title = Docking Autopilot
 
+		#MechJeb_Docking_label1 = Choose a target to dock with
+		#MechJeb_Docking_label2 = Warning: You need to control the vessel from a docking port. Right click a docking port and select "Control from here"
+		#MechJeb_Docking_label3 = Warning: target is not a docking port. Right click the target docking port and select "Set as target"
+		#MechJeb_Docking_label4 = Warning: this vessel is not controlled from a docking node. Right click the desired docking node on this vessel and select "Control from here."
+		#MechJeb_Docking_label5 = Speed limit
+		#MechJeb_Docking_label6 = Start Distance
+		#MechJeb_Docking_label7 = safeDistance <<1>>
+		#MechJeb_Docking_label8 = targetSize   <<1>>
+		#MechJeb_Docking_label9 = Status: <<1>>
+		#MechJeb_Docking_label10 = Error X: <<1>>
+		#MechJeb_Docking_label11 = Error Y: <<1>>
+		#MechJeb_Docking_label12 = Error Z: <<1>>
+		#MechJeb_Docking_label13 = Distance Dock: <<1>>
+		#MechJeb_Docking_label14 = Distance Dock Axis: <<1>>
 
+		#MechJeb_Docking_button = Dump Bounding Box Info
+
+		#MechJeb_Docking_checkbox1 = Autopilot enabled
+		#MechJeb_Docking_checkbox2 = Override Safe Distance
+		#MechJeb_Docking_checkbox3 = Safe Distance
+		#MechJeb_Docking_checkbox4 = Override Start Distance
+		#MechJeb_Docking_checkbox5 = Draw Bounding Box
+		#MechJeb_Docking_checkbox6 = Force Roll :
 		
+	//Flight Recorder
+		#MechJeb_Flightrecord_title = Flight Recorder
+		#MechJeb_Flightrecord_Button1_1 = Resume
+		#MechJeb_Flightrecord_Button1_2 = Pause
+		#MechJeb_Flightrecord_Button2_1 = Downrange
+		#MechJeb_Flightrecord_Button2_2 = Time
+		#MechJeb_Flightrecord_Button3 = Mark
+		#MechJeb_Flightrecord_Button4 = Reset Scale
+		#MechJeb_Flightrecord_Button5 = CSV
+
+		#MechJeb_Flightrecord_checkbox1 = Auto Scale
+		#MechJeb_Flightrecord_checkbox2 = Real Atmo
+		#MechJeb_Flightrecord_checkbox3 = Stages
+		#MechJeb_Flightrecord_checkbox4 = Altitude
+		#MechJeb_Flightrecord_checkbox5 = True Altitude
+		#MechJeb_Flightrecord_checkbox6 = Acceleration
+		#MechJeb_Flightrecord_checkbox7 = Surface speed
+		#MechJeb_Flightrecord_checkbox8 = Orbital speed
+		#MechJeb_Flightrecord_checkbox9 = Mass
+		#MechJeb_Flightrecord_checkbox10 = Q
+		#MechJeb_Flightrecord_checkbox11 = AoA
+		#MechJeb_Flightrecord_checkbox12 = AoS
+		#MechJeb_Flightrecord_checkbox13 = AoD
+		#MechJeb_Flightrecord_checkbox14 = Pitch
+		#MechJeb_Flightrecord_checkbox15 = Gravity Loss
+		#MechJeb_Flightrecord_checkbox16 = Drag Loss
+		#MechJeb_Flightrecord_checkbox17 = Steering Loss
+		#MechJeb_Flightrecord_checkbox18 = ASL
+		#MechJeb_Flightrecord_checkbox19 = AGL
+		#MechJeb_Flightrecord_checkbox20 = Acc
+		#MechJeb_Flightrecord_checkbox21 = SrfVel
+		#MechJeb_Flightrecord_checkbox22 = ObtVel
+		#MechJeb_Flightrecord_checkbox23 = Mass
+		#MechJeb_Flightrecord_checkbox24 = Q
+		#MechJeb_Flightrecord_checkbox25 = AoA
+		#MechJeb_Flightrecord_checkbox26 = AoS
+		#MechJeb_Flightrecord_checkbox27 = AoD
+		#MechJeb_Flightrecord_checkbox28 = Pitch
+		#MechJeb_Flightrecord_checkbox29 = Gravity Loss
+		#MechJeb_Flightrecord_checkbox30 = Drag Loss
+		#MechJeb_Flightrecord_checkbox31 = Steering Loss
+
+		#MechJeb_Flightrecord_Label1 = Time <<1>>
+		#MechJeb_Flightrecord_Label2 = Downrange <<1>>
+		#MechJeb_Flightrecord_Label3 = Storage: <<1>> %
+
+	//Maneuver Node Editor
+		#MechJeb_NodeEd_title = Maneuver Node Editor
+
+		#MechJeb_NodeEd_Snap1 = periapsis
+		#MechJeb_NodeEd_Snap2 = apoapsis
+		#MechJeb_NodeEd_Snap3 = AN with target
+		#MechJeb_NodeEd_Snap4 = DN with target
+		#MechJeb_NodeEd_Snap5 = equatorial AN
+		#MechJeb_NodeEd_Snap6 = equatorial DN
+
+		#MechJeb_NodeEd_Label1 = No maneuver nodes to edit
+		#MechJeb_NodeEd_Label2 = Prograde:
+		#MechJeb_NodeEd_Label3 = Radial+:
+		#MechJeb_NodeEd_Label4 = Normal+:
+		#MechJeb_NodeEd_Label5 = Set delta to:
+		#MechJeb_NodeEd_Label6 = Shift time
+		#MechJeb_NodeEd_Label7 = Tolerance:
+		#MechJeb_NodeEd_Label8 = Conics mode:
+		#MechJeb_NodeEd_Label9 = Current mode: <<1>>
+
+		#MechJeb_NodeEd_button1 = Merge next node
+		#MechJeb_NodeEd_button2 = Update
+		#MechJeb_NodeEd_button3 = Snap node to
+		#MechJeb_NodeEd_button4 = Execute next node
+		#MechJeb_NodeEd_button5 = Execute all nodes
+		#MechJeb_NodeEd_button6 = Abort node execution
+
+		#MechJeb_NodeEd_checkbox1 = Auto-warp
+
+	//RCS Balancer
+		#MechJeb_RCSBalancer_title = RCS Balancer
+
+		#MechJeb_RCSBalancer_label1 = Overdrive
+		#MechJeb_RCSBalancer_label2 = Overdrive increases power when possible, at the cost of RCS fuel efficiency.
+		#MechJeb_RCSBalancer_label3 = Overdrive scale
+		#MechJeb_RCSBalancer_label4 = torque factor
+		#MechJeb_RCSBalancer_label5 = Translate factor
+		#MechJeb_RCSBalancer_label6 = Waste factor
 
 
+		#MechJeb_RCSBalancer_checkbox1 = Smart translation
+		#MechJeb_RCSBalancer_checkbox2 = Advanced options
+
+	//Rendezvous Autopilot
+		#MechJeb_RZauto_title = Rendezvous Autopilot
+
+		#MechJeb_RZauto_label1 = Select a target to rendezvous with.
+		#MechJeb_RZauto_label2 = Rendezvous target must be in the same sphere of influence.
+		#MechJeb_RZauto_label3 = Rendezvous target
+		#MechJeb_RZauto_label4 = Desired final distance:
+		#MechJeb_RZauto_label5 = Max # of phasing orbits:
+		#MechJeb_RZauto_label6 = Max # of phasing orbits must be at least 5.
+		#MechJeb_RZauto_label7 = Status: <<1>>
+
+		#MechJeb_RZauto_checkbox1 = Auto-warp
+
+		#MechJeb_RZauto_button1 = Engage autopilot
+		#MechJeb_RZauto_button2 = Disengage autopilot 
+
+	//Rendezvous Planner
+		#MechJeb_RZplan_title = Rendezvous Planner
+
+		#MechJeb_RZplan_button1 = Align Planes
+		#MechJeb_RZplan_button2 = Establish new orbit at
+		#MechJeb_RZplan_button3 = Intercept with Hohmann transfer
+		#MechJeb_RZplan_button4 = Match velocities at closest approach
+		#MechJeb_RZplan_button5 = Get closer
+		#MechJeb_RZplan_button6 = Execute next node
+		#MechJeb_RZplan_button7 = Execute all nodes
+		#MechJeb_RZplan_button8 = Abort node execution
+
+		#MechJeb_RZplan_checkbox = Auto-warp
+
+		#MechJeb_RZplan_label1 = Select a target to rendezvous with.
+		#MechJeb_RZplan_label2 = Rendezvous target must be in the same sphere of influence.
+		#MechJeb_RZplan_label3 = Rendezvous target
+		#MechJeb_RZplan_label4 = Target orbit
+		#MechJeb_RZplan_label5 = Current orbit
+		#MechJeb_RZplan_label6 = Relative inclination
+		#MechJeb_RZplan_label7 = Time until closest approach
+		#MechJeb_RZplan_label8 = Separation at closest approach
+		#MechJeb_RZplan_label9 = Tolerance:
+
+	//Rover Autopilot
+		#MechJeb_Rover_title = Rover Autopilot
+
+		#MechJeb_Rover_label1 = Target Speed
+		#MechJeb_Rover_label2 = Waypoints
+
+		#MechJeb_Rover_button1 = To Target
+		#MechJeb_Rover_button2 = Add Target
+		#MechJeb_Rover_button3 = Drive
+		#MechJeb_Rover_button4 = Stop
+		#MechJeb_Rover_button5 = Waypoints
+
+		//Waypoint Help
+		#MechJeb_Waypointhelper_title = Waypoint Help
+
+	//Scripting Module
+		#MechJeb_ScriptMod_title = Scripting Module
+
+		#MechJeb_ScriptMod_label1 = Warming up. Please wait... <<1>> s
+		#MechJeb_ScriptMod_label2 = current vessel
+		#MechJeb_ScriptMod_label3 = global memory
+		#MechJeb_ScriptMod_label4 = Add action
+		#MechJeb_ScriptMod_label5 = Program depth is limited to 4
+
+		#MechJeb_ScriptMod_button1 = ▶ START
+		#MechJeb_ScriptMod_button2 = ☇ Reset
+		#MechJeb_ScriptMod_button3 = ■ STOP
+		#MechJeb_ScriptMod_button4 = ▼ Full GUI
+		#MechJeb_ScriptMod_button5 = △ Compact GUI
+		#MechJeb_ScriptMod_button6 = Clear All
+		#MechJeb_ScriptMod_button7 = Save
+		#MechJeb_ScriptMod_button8 = Load
+
+		#MechJeb_ScriptMod_checkbox1 = Hide Add Actions
+
+		#MechJeb_ScriptMod_actions1 = Time
+			#MechJeb_ScriptMod_actions1_1 = Timer
+			#MechJeb_ScriptMod_actions1_2 = Pause
+			#MechJeb_ScriptMod_actions1_3 = Wait for
+			#MechJeb_ScriptMod_actions1_4 = Warp
+		#MechJeb_ScriptMod_actions2 = Docking
+			#MechJeb_ScriptMod_actions2_1 = Decouple
+			#MechJeb_ScriptMod_actions2_2 = Dock Shield
+			#MechJeb_ScriptMod_actions2_3 = Target Dock
+		#MechJeb_ScriptMod_actions3 = Target
+			#MechJeb_ScriptMod_actions3_1 = Target Dock
+			#MechJeb_ScriptMod_actions3_2 = Target Body
+		#MechJeb_ScriptMod_actions4 = Control
+			#MechJeb_ScriptMod_actions4_1 = Control From
+			#MechJeb_ScriptMod_actions4_2 = RCS
+			#MechJeb_ScriptMod_actions4_3 = SAS
+			#MechJeb_ScriptMod_actions4_4 = Switch Vessel
+		#MechJeb_ScriptMod_actions5 = Crew
+			#MechJeb_ScriptMod_actions5_1 = Crew Transfer
+		#MechJeb_ScriptMod_actions6 = Trajectory
+			#MechJeb_ScriptMod_actions6_1 = Maneuver
+			#MechJeb_ScriptMod_actions6_2 = Execute node
+		#MechJeb_ScriptMod_actions7 = Staging/Engines
+			#MechJeb_ScriptMod_actions7_1 = Staging
+			#MechJeb_ScriptMod_actions7_2 = Activate Engine
+		#MechJeb_ScriptMod_actions8 = Settings
+			#MechJeb_ScriptMod_actions8_1 = Node tolerance
+		#MechJeb_ScriptMod_actions9 = Modules
+			#MechJeb_ScriptMod_actions9_1 = MODULE Smart A.S.S.
+			#MechJeb_ScriptMod_actions9_2 = MODULE Ascent Autopilot
+			#MechJeb_ScriptMod_actions9_3 = MODULE Docking Autopilot
+			#MechJeb_ScriptMod_actions9_4 = MODULE Landing
+			#MechJeb_ScriptMod_actions9_5 = MODULE Rendezvous
+			#MechJeb_ScriptMod_actions9_6 = MODULE Rendezvous Autopilot
+		#MechJeb_ScriptMod_actions10 = Save/Load/Actions
+			#MechJeb_ScriptMod_actions10_1 = Quicksave
+			#MechJeb_ScriptMod_actions10_2 = Load Script
+			#MechJeb_ScriptMod_actions10_3 = Action Group
+		#MechJeb_ScriptMod_actions11 = PROGRAM Logic
+			#MechJeb_ScriptMod_actions11_1 = PROGRAM - Repeat
+			#MechJeb_ScriptMod_actions11_2 = PROGRAM - If
+			#MechJeb_ScriptMod_actions11_3 = PROGRAM - While
+			#MechJeb_ScriptMod_actions11_4 = PROGRAM - Parallel
+			#MechJeb_ScriptMod_actions11_5 = Wait for
+		#MechJeb_ScriptMod_actions12 = Plugins
+
+	//Settings
+		#MechJeb_Settings_title = Settings
+
+		#MechJeb_Settings_label1 = Current skin: <<1>>
+		#MechJeb_Settings_label2 = UI Scale:
+
+		#MechJeb_Settings_checkbox1 = Replace drop down menu with arrow selector
+		#MechJeb_Settings_checkbox2 = Activate SAS on Warp
+
+		#MechJeb_Settings_button1 = \nRestore factory default settings\n
+		#MechJeb_Settings_button2 = Use MechJeb 1 GUI skin
+		#MechJeb_Settings_button3 = Use MechJeb 2 GUI skin
+		#MechJeb_Settings_button4 = Use MJ2 Compact GUI skin
+
+	//Smart A.S.S. or Smart A.C.S.
+		#MechJeb_SmartASS_title = Smart A.S.S. 
+		
+		#MechJeb_SmartACS_title = Smart A.C.S.
+
+		#MechJeb_SmartASS_button1 = OBT
+		#MechJeb_SmartASS_button2 = SURF
+		#MechJeb_SmartASS_button3 = TGT
+		#MechJeb_SmartASS_button4 = ADV
+		#MechJeb_SmartASS_button5 = AUTO
+		#MechJeb_SmartASS_button6 = Orbit
+		#MechJeb_SmartASS_button7 = Surface
+		#MechJeb_SmartASS_button8 = Target
+		#MechJeb_SmartASS_button9 = Advanced
+		#MechJeb_SmartASS_button10 = Auto
+		#MechJeb_SmartASS_button11 = OFF
+		#MechJeb_SmartASS_button12 = KILL\nROT
+		#MechJeb_SmartASS_button13 = NODE
+		#MechJeb_SmartASS_button14 = SURF
+		#MechJeb_SmartASS_button15 = PRO\nGRAD
+		#MechJeb_SmartASS_button16 = RETR\nGRAD
+		#MechJeb_SmartASS_button17 = NML\n+
+		#MechJeb_SmartASS_button18 = NML\n-
+		#MechJeb_SmartASS_button19 = RAD\n+
+		#MechJeb_SmartASS_button20 = RAD\n-
+		#MechJeb_SmartASS_button21 = RVEL\n+
+		#MechJeb_SmartASS_button22 = RVEL\n-
+		#MechJeb_SmartASS_button23 = TGT\n+
+		#MechJeb_SmartASS_button24 = TGT\n-
+		#MechJeb_SmartASS_button25 = PAR\n+
+		#MechJeb_SmartASS_button26 = PAR\n-
+		#MechJeb_SmartASS_button27 = ADV
+		#MechJeb_SmartASS_button28 = AUTO
+		#MechJeb_SmartASS_button29 = SVEL\n+
+		#MechJeb_SmartASS_button30 = SVEL\n-
+		#MechJeb_SmartASS_button31 = HVEL\n+
+		#MechJeb_SmartASS_button32 = HVEL\n-
+		#MechJeb_SmartASS_button33 = UP
+		#MechJeb_SmartASS_button34 = Off
+		#MechJeb_SmartASS_button35 = Kill Rotation
+		#MechJeb_SmartASS_button36 = Node
+		#MechJeb_SmartASS_button37 = Surface
+		#MechJeb_SmartASS_button38 = Prograde
+		#MechJeb_SmartASS_button39 = Retrograde
+		#MechJeb_SmartASS_button40 = Normal+
+		#MechJeb_SmartASS_button41 = Normal-
+		#MechJeb_SmartASS_button42 = Radial+
+		#MechJeb_SmartASS_button43 = Radial-
+		#MechJeb_SmartASS_button44 = Relative Velocity+
+		#MechJeb_SmartASS_button45 = Relative Velocity-
+		#MechJeb_SmartASS_button46 = Target+
+		#MechJeb_SmartASS_button47 = Target-
+		#MechJeb_SmartASS_button48 = Parallel+
+		#MechJeb_SmartASS_button49 = Parallel-
+		#MechJeb_SmartASS_button50 = Advanced
+		#MechJeb_SmartASS_button51 = Auto
+		#MechJeb_SmartASS_button52 = Surface Velocity+
+		#MechJeb_SmartASS_button53 = Surface Velocity-
+		#MechJeb_SmartASS_button54 = Horizontal Velocity+
+		#MechJeb_SmartASS_button55 = Horizontal Velocity-
+		#MechJeb_SmartASS_button56 = Up
+		#MechJeb_SmartASS_button57 = AUTO
+		#MechJeb_SmartASS_button58 = EXECUTE
+
+
+		#MechJeb_SmartASS_label1 = Mode:
+		#MechJeb_SmartASS_label2 = Please select a target
+		#MechJeb_SmartASS_label3 = Reference:
+		#MechJeb_SmartASS_label4 = Direction:
+
+		#MechJeb_SmartASS_checkbox1 = Disable SmartACS automatically
+		#MechJeb_SmartASS_checkbox2 = Disable SmartASS automatically
+		#MechJeb_SmartASS_checkbox3 = Force Roll :
+
+	//SmartRcs
+		#MechJeb_SmartRcs_title = SmartRcs
+
+		#MechJeb_SmartRcs_button1 = OFF
+		#MechJeb_SmartRcs_button2 = ZERO RVEL
+		#MechJeb_SmartRcs_button3 = AUTO
+
+		#MechJeb_SmartRcs_label1 = Choose a target
+
+		#MechJeb_SmartRcs_checkbox1 = Disable SmartRcs automatically
+		#MechJeb_SmartRcs_checkbox2 = RCS throttle when engines are offline
+		#MechJeb_SmartRcs_checkbox3 = Use RCS for rotation
 
 	//Landing Guidance
 		#MechJeb_LandingGuidance_title = Landing Guidance
@@ -492,5 +851,82 @@ Localization
 		#MechJeb_Trans_current_spd = Acitve speed
 		#MechJeb_Trans_NOPANIC = DON'T PANIC!
 		#MechJeb_Trans_PANIC = PANIC!!!
+
+	//Utilities
+		#MechJeb_Utilities_title = Utilities
+
+		#MechJeb_Utilities_label1 = Autostaging <<1>> Active
+		#MechJeb_Utilities_label1_1 = once
+		#MechJeb_Utilities_label2 = Jet safety margin
+		#MechJeb_Utilities_label3 = Differential throttle failed\nMore engines required
+		#MechJeb_Utilities_label4 = Differential throttle failed\nNo active engine
+		#MechJeb_Utilities_label5 = Differential throttle failed\nCannot find solution
+
+		#MechJeb_Utilities_checkbox1 = Autostage
+		#MechJeb_Utilities_checkbox2 = Smooth throttle
+		#MechJeb_Utilities_checkbox3 = Manage air intakes
+
+		#MechJeb_Utilities_button1 = Autostage once
+
+	//Warp helper
+		#MechJeb_WarpHelper_title = Warp Helper
+
+		#MechJeb_WarpHelper_Combobox_text1 = periapsis
+		#MechJeb_WarpHelper_Combobox_text2 = apoapsis
+		#MechJeb_WarpHelper_Combobox_text3 = maneuver node
+		#MechJeb_WarpHelper_Combobox_text4 = SoI transition
+		#MechJeb_WarpHelper_Combobox_text5 = Time
+		#MechJeb_WarpHelper_Combobox_text6 = Phase angle
+		#MechJeb_WarpHelper_Combobox_text7 = suicide burn
+		#MechJeb_WarpHelper_Combobox_text8 = atmospheric entry
+
+		#MechJeb_WarpHelper_label1 = Warp to:\u0020
+		#MechJeb_WarpHelper_label2 = Warp for:\u0020
+		#MechJeb_WarpHelper_label3 = You need a target
+		#MechJeb_WarpHelper_label4 = Phase Angle:
+		#MechJeb_WarpHelper_label5 = Lead time:\u0020
+		#MechJeb_WarpHelper_label6 = Warping to\u0020
+
+		#MechJeb_WarpHelper_checkbox1 = Quick warp
+		
+		#MechJeb_WarpHelper_scrmsg = MJ : Warp paused - resume in the Warp Helper menu
+
+		#MechJeb_WarpHelper_button1 = Abort
+		#MechJeb_WarpHelper_button2 = Warp
+		#MechJeb_WarpHelper_button3 = Resume MJ Warp
+		#MechJeb_WarpHelper_button4 = Pause MJ Warp
+
+	//InfoItems
+
+		#MechJeb_InfoItems_label1 = Stage stats
+
+		#MechJeb_InfoItems_button1 = Short stats
+		#MechJeb_InfoItems_button2 = Long stats
+		#MechJeb_InfoItems_button3 = Full stats
+		#MechJeb_InfoItems_button4 = Custom
+
+		#MechJeb_InfoItems_UnlimitedText = Unlimited
+		#MechJeb_InfoItems_velocityNA = Target-relative velocity: (N/A)
+		#MechJeb_InfoItems_velocity = Target-relative velocity:
+		#MechJeb_InfoItems_CopytoClipboard = Copy Lat/Lon/Alt to Clipboard
+
+		#MechJeb_InfoItems_VesselSituation1 = Flying over\u0020
+		#MechJeb_InfoItems_VesselSituation2 = Upper atmosphere of 
+		#MechJeb_InfoItems_VesselSituation3 = Space just above 
+		#MechJeb_InfoItems_VesselSituation4 = Space high over 
+
+		#MechJeb_InfoItems_StatsColumn1 = Start Mass
+		#MechJeb_InfoItems_StatsColumn2 = End mass
+		#MechJeb_InfoItems_StatsColumn3 = Staged Mass
+		#MechJeb_InfoItems_StatsColumn4 = Burned Mass
+		#MechJeb_InfoItems_StatsColumn5 = TWR
+		#MechJeb_InfoItems_StatsColumn6 = Max TWR
+		#MechJeb_InfoItems_StatsColumn7 = SLT
+		#MechJeb_InfoItems_StatsColumn8 = Max SLT
+		#MechJeb_InfoItems_StatsColumn9 = ISP
+		#MechJeb_InfoItems_StatsColumn10 = Atmo ΔV
+		#MechJeb_InfoItems_StatsColumn11 = Vac ΔV
+		#MechJeb_InfoItems_StatsColumn12 = Time
+
 	}
 }
