--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -5,6 +5,12 @@ Localization
 		#MechJeb_ModuleAreLocked = Some modules are disabled until you unlock the proper node in the R&D tree or upgrade the tracking station.
 		#MechJeb_OnlineManualbutton = Online Manual
 
+		#MechJeb_InstallCheckA_title = Incorrect MechJeb2 Installation
+		#MechJeb_InstallCheckA_msg = MechJeb2 has been installed incorrectly and will not function properly.\nAll MechJeb2 files should be located in KSP like this \n<KSP>\n\tGameData\n\t\tMechJeb2\n\t\t\tParts\n\t\t\tPlugins\n\nDo not move any files from inside the MechJeb2 folder.\n\nIncorrect path(s):\n
+
+		#MechJeb_InstallCheckB_title = Redundant MechJebMenuToolbar Installation
+		#MechJeb_InstallCheckB_msg = MechJebMenuToolbar is installed but this version of MechJeb2 already includes support for Blizzy78 Toolbar Plugin.\nPlease delete this dll:
+
 	//ManeuverPlaner
 
 		#MechJeb_Maneuver_Planner_title = Maneuver Planner
