--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -10,6 +10,13 @@ Localization
 
 		#MechJeb_InstallCheckB_title = Redundant MechJebMenuToolbar Installation
 		#MechJeb_InstallCheckB_msg = MechJebMenuToolbar is installed but this version of MechJeb2 already includes support for Blizzy78 Toolbar Plugin.\nPlease delete this dll:
+		
+		//#MechJeb_LogError_msg0 = MechJeb couldn't find the master MechJeb module for the current vessel.
+		//#MechJeb_LogError_msg1 = MechJeb couldn't find MechJebModuleSmartASS for orbital control via action group.
+		//#MechJeb_LogError_msg2 = MechJeb couldn't find MechJebModuleTranslatron for translatron control via action group.
+		//#MechJeb_LogError_msg3 = 
+		//#MechJeb_LogError_msg4 = 
+		//#MechJeb_LogError_msg5 = 
 
 		//ManeuverPlaner
 
@@ -315,8 +322,23 @@ Localization
 
 	//Ascent Guidance
 		#MechJeb_Ascent_title = Ascent Guidance
+		#MechJeb_Ascent_ascentPathList1 = Classic Ascent Profile
+		#MechJeb_Ascent_ascentPathList2 = Stock-style GravityTurn™
+		#MechJeb_Ascent_ascentPathList3 = Primer Vector Guidance (RSS/RO)
+
+		#MechJeb_Ascent_status1 = Pre Launch
+		#MechJeb_Ascent_status2 = Off
+		#MechJeb_Ascent_status3 = Pre Launch
+		#MechJeb_Ascent_status4 = Vessel is not landed, skipping pre-launch
+		#MechJeb_Ascent_status5 = Retracting solar panels
+		#MechJeb_Ascent_status6 = Awaiting liftoff
+		#MechJeb_Ascent_status7 = Circularizing
+		#MechJeb_Ascent_status8 = Coasting to circularization burn
+		
+
 		#MechJeb_NavBallGuidance_btn1 = Hide ascent navball guidance
 		#MechJeb_NavBallGuidance_btn2 = Show ascent navball guidance
+
 		#MechJeb_Ascent_button1 = Disengage autopilot
 		#MechJeb_Ascent_button2 = Engage autopilot
 		#MechJeb_Ascent_button3 = Reset Guidance (DO NOT PRESS)
@@ -383,6 +405,7 @@ Localization
 		#MechJeb_Ascent_checkbox8 = Auto-warp
 		#MechJeb_Ascent_checkbox9 = Skip Circularization
 		#MechJeb_Ascent_checkbox10 = Edit ascent path
+		
 
 		#MechJeb_Ascent_msg1 = Launching at interplanetary window
 		#MechJeb_Ascent_msg2 = Launching to target plane
@@ -466,6 +489,13 @@ Localization
 
 	//Docking Autopilot
 		#MechJeb_Docking_title = Docking Autopilot
+
+		#MechJeb_Docking_status1 = Backing up at <<1>> m/s before moving on target side (lat: <<2>> m/s)
+		#MechJeb_Docking_status2 = Moving away from docking axis at <<1>> m/s to avoid hitting target on backing up
+		#MechJeb_Docking_status3 = Moving at <<1>> m/s to get on the correct side of the target. (lat: <<2>> m/s)
+		#MechJeb_Docking_status4 = Backing up at <<1>> m/s
+		#MechJeb_Docking_status5 = Moving toward the starting point at <<1>> m/s.
+		#MechJeb_Docking_status6 = Moving forward to dock at <<1>> / <<2>> m/s.
 
 		#MechJeb_Docking_label1 = Choose a target to dock with
 		#MechJeb_Docking_label2 = Warning: You need to control the vessel from a docking port. Right click a docking port and select "Control from here"
@@ -905,11 +935,19 @@ Localization
 	//InfoItems
 
 		#MechJeb_InfoItems_label1 = Stage stats
+		#MechJeb_InfoItems_label2 = Target-relative Angular velocity: (N/A)
+		#MechJeb_InfoItems_label3 = Target-relative angular velocity:
+		#MechJeb_InfoItems_label4 = Separation from target: (N/A)
+		#MechJeb_InfoItems_label5 = Separation from target:
+		#MechJeb_InfoItems_label6 = Planet phase angles
+		#MechJeb_InfoItems_label7 = Moon phase angles
 
 		#MechJeb_InfoItems_button1 = Short stats
 		#MechJeb_InfoItems_button2 = Long stats
 		#MechJeb_InfoItems_button3 = Full stats
 		#MechJeb_InfoItems_button4 = Custom
+		#MechJeb_InfoItems_button5 = Live SLT
+		#MechJeb_InfoItems_button6 = 0Alt SLT
 
 		#MechJeb_InfoItems_UnlimitedText = Unlimited
 		#MechJeb_InfoItems_velocityNA = Target-relative velocity: (N/A)
@@ -934,5 +972,58 @@ Localization
 		#MechJeb_InfoItems_StatsColumn11 = Vac ΔV
 		#MechJeb_InfoItems_StatsColumn12 = Time
 
+
+	//Ascent Path Editor
+		#MechJeb_AscentPathEd_title = Ascent Path Editor
+		#MechJeb_AscentPathEd_nopath = Path is null!!!1!!1!1!1111!11eleven
+		#MechJeb_AscentPathEd_auto = Automatic Altitude Turn
+		#MechJeb_AscentPathEd_label1 = Altitude:\u0020
+		#MechJeb_AscentPathEd_label2 = Velocity:\u0020
+		#MechJeb_AscentPathEd_label3 = Turn start when Altitude is 
+		#MechJeb_AscentPathEd_label4 = or Velocity reach
+		#MechJeb_AscentPathEd_label5 = Turn end altitude: 
+		#MechJeb_AscentPathEd_label6 = Turn start altitude:
+		#MechJeb_AscentPathEd_label7 = Turn start velocity:
+		#MechJeb_AscentPathEd_label8 = Turn end altitude:
+		#MechJeb_AscentPathEd_label9 = Final flight path angle:
+		#MechJeb_AscentPathEd_label10 = Turn shape:
+	//AttitudeController
+		#MechJeb_AttitudeController_checkbox1 = \u0020Auto-tuning
+		#MechJeb_AttitudeController_checkbox2 = \u0020Low Pass Filter
+
+		#MechJeb_AttitudeController_label1 = Larger ship do better with a larger Tf
+		#MechJeb_AttitudeController_label2 = Tf (s)
+		#MechJeb_AttitudeController_label3 = P
+		#MechJeb_AttitudeController_label4 = Y
+		#MechJeb_AttitudeController_label5 = R
+		#MechJeb_AttitudeController_label6 = Tf
+		#MechJeb_AttitudeController_label7 = Tf range
+		#MechJeb_AttitudeController_label8 = min
+		#MechJeb_AttitudeController_label10 = max
+		#MechJeb_AttitudeController_label11 = Maximum Relative Angular Velocity
+		#MechJeb_AttitudeController_label12 = Kp
+		#MechJeb_AttitudeController_label13 = Ki
+		#MechJeb_AttitudeController_label14 = Kd
+		#MechJeb_AttitudeController_label15 = Error
+		#MechJeb_AttitudeController_label16 = prop. action.
+		#MechJeb_AttitudeController_label17 = deriv. action
+		#MechJeb_AttitudeController_label18 = integral action.
+		#MechJeb_AttitudeController_label19 = PID Action
+		#MechJeb_AttitudeController_label20 = Inertia
+
+		#MechJeb_AttitudeController_PIDF = PID factors
+		#MechJeb_AttitudeController_PIDFactor1 = Deadband = 
+
+		#MechJeb_Ascent_checkbox11 = Limit Q to
+		#MechJeb_Ascent_checkbox12 = Prevent engine overheats
+		#MechJeb_Ascent_checkbox13 = Prevent jet flameout
+		#MechJeb_Ascent_checkbox14 = Prevent unstable ignition
+		#MechJeb_Ascent_checkbox15 = Use RCS to ullage
+		#MechJeb_Ascent_checkbox16 = Limit acceleration to
+		#MechJeb_Ascent_checkbox17 = Limit throttle to
+		#MechJeb_Ascent_checkbox18 = Keep limited throttle over
+		#MechJeb_Ascent_checkbox19 = Differential throttle
+		#MechJeb_Ascent_checkbox20 = Electric limit Lo
+		#MechJeb_Ascent_srcmsg1 = <color=orange>[MechJeb]: Killing throttle to prevent unstable ignition</color>
 	}
 }
