--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -11,12 +11,6 @@ Localization
 		#MechJeb_InstallCheckB_title = Redundant MechJebMenuToolbar Installation
 		#MechJeb_InstallCheckB_msg = MechJebMenuToolbar is installed but this version of MechJeb2 already includes support for Blizzy78 Toolbar Plugin.\nPlease delete this dll:
 		
-		//#MechJeb_LogError_msg0 = MechJeb couldn't find the master MechJeb module for the current vessel.
-		//#MechJeb_LogError_msg1 = MechJeb couldn't find MechJebModuleSmartASS for orbital control via action group.
-		//#MechJeb_LogError_msg2 = MechJeb couldn't find MechJebModuleTranslatron for translatron control via action group.
-		//#MechJeb_LogError_msg3 = 
-		//#MechJeb_LogError_msg4 = 
-		//#MechJeb_LogError_msg5 = 
 
 		//ManeuverPlaner
 
@@ -1014,6 +1008,7 @@ Localization
 		#MechJeb_AttitudeController_PIDF = PID factors
 		#MechJeb_AttitudeController_PIDFactor1 = Deadband = 
 
+		//New Adding
 		#MechJeb_Ascent_checkbox11 = Limit Q to
 		#MechJeb_Ascent_checkbox12 = Prevent engine overheats
 		#MechJeb_Ascent_checkbox13 = Prevent jet flameout
@@ -1025,5 +1020,18 @@ Localization
 		#MechJeb_Ascent_checkbox19 = Differential throttle
 		#MechJeb_Ascent_checkbox20 = Electric limit Lo
 		#MechJeb_Ascent_srcmsg1 = <color=orange>[MechJeb]: Killing throttle to prevent unstable ignition</color>
+
+		#MechJeb_HybridController_checkbox1 = useInertia
+		#MechJeb_HybridController_checkbox2 = RollControlRange
+
+		#MechJeb_HybridController_label1 = MaxStoppingTime
+		#MechJeb_HybridController_label2 = Actuation
+		#MechJeb_HybridController_label3 = phiVector
+		#MechJeb_HybridController_label4 = TargetTorque
+		#MechJeb_HybridController_label5 = ControlTorque
+		#MechJeb_HybridController_label6 = Inertia
+		
+		#MechJeb_Actiongroup_label1 = Toggle action group
+
 	}
 }
