DeltaV window - Allow to hide the 0 dv stages

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -942,6 +942,9 @@ Localization
 		#MechJeb_InfoItems_button4 = Custom
 		#MechJeb_InfoItems_button5 = Live SLT
 		#MechJeb_InfoItems_button6 = 0Alt SLT
+		
+		#MechJeb_InfoItems_showEmpty = Show 0
+		#MechJeb_InfoItems_hideEmpty = Hide 0
 
 		#MechJeb_InfoItems_UnlimitedText = Unlimited
 		#MechJeb_InfoItems_velocityNA = Target-relative velocity: (N/A)
