Forgot a new loc8

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -956,6 +956,7 @@ Localization
 		#MechJeb_InfoItems_VesselSituation3 = Space just above 
 		#MechJeb_InfoItems_VesselSituation4 = Space high over 
 
+		#MechJeb_InfoItems_StatsColumn0 = Stage
 		#MechJeb_InfoItems_StatsColumn1 = Start Mass
 		#MechJeb_InfoItems_StatsColumn2 = End mass
 		#MechJeb_InfoItems_StatsColumn3 = Staged Mass
