Simplified Chinese Revision

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -83,9 +83,9 @@ Localization
 
 		#MechJeb_adv_Preconditions3 = must select a target for the interplanetary transfer.
 
-		#MechJeb_adv_Preconditions4 = doesn't make sense to plot an interplanetary transfer from an orbit around 
+		#MechJeb_adv_Preconditions4 = doesn't make sense to plot an interplanetary transfer from an orbit around <<1>> .
 
-		#MechJeb_adv_Preconditions5 = use regular Hohmann transfer function to intercept another body orbiting
+		#MechJeb_adv_Preconditions5 = use regular Hohmann transfer function to intercept another body orbiting <<1>>.
 
 		#MechJeb_adv_Preconditions6 = an interplanetary transfer from within <<1>>'s sphere of influence must target a body that orbits <<2>> 's parent, <<3>>.
 
@@ -134,7 +134,7 @@ Localization
 
 		#MechJeb_both_Exception1 = new periapsis cannot be higher than the altitude of the burn (<<1>>)//altitude(m)
 		#MechJeb_both_Exception2 = new apoapsis cannot be lower than the altitude of the burn
-		#MechJeb_both_Exception3 = new periapsis cannot be lower than minus the radius of
+		#MechJeb_both_Exception3 = new periapsis cannot be lower than minus the radius of <<1>>
 
 		//Change inclination
 		#MechJeb_inclination_title = change inclination
@@ -149,13 +149,13 @@ Localization
 		#MechJeb_Pe_title = change periapsis
 		#MechJeb_Pe_label = New periapsis:
 		#MechJeb_Pe_Exception1 = new periapsis cannot be higher than the altitude of the burn
-		#MechJeb_Pe_Exception2 = new periapsis cannot be lower than minus the radius of
+		#MechJeb_Pe_Exception2 = new periapsis cannot be lower than minus the radius of <<1>>
 
 		//Change Semi-major axis
 		#MechJeb_Sa_title = change semi-major axis"
 		#MechJeb_Sa_label = New Semi-Major Axis:
 		#MechJeb_Sa_errormsg = Warning: new Semi-Major Axis is very large, and may result in a hyberbolic orbit
-		#MechJeb_Sa_Exception = cannot make Semi-Major Axis less than twice the burn altitude plus the radius of
+		#MechJeb_Sa_Exception = cannot make Semi-Major Axis less than twice the burn altitude plus the radius of <<1>>
 
 		//change surface longitude of apsis
 		#MechJeb_la_title = change surface longitude of apsis
@@ -188,21 +188,19 @@ Localization
 		//match velocities with target
 		#MechJeb_match_v_title = match velocities with target
 		#MechJeb_match_v_Exception1 = must select a target to match velocities with.
-		#MechJeb_match_v_Exception2 =target must be in the same sphere of influence.
+		#MechJeb_match_v_Exception2 = target must be in the same sphere of influence.
 
 		//resonant orbit
 		#MechJeb_resonant_title = resonant orbit
-		#MechJeb_resonant_label1_1 = Change your orbital period to \u0020
-		#MechJeb_resonant_label1_2 = \u0020 of your current orbital period
+		#MechJeb_resonant_label1 = Change your orbital period to <<1>> of your current orbital period
 		#MechJeb_resonant_label2 = New orbital period ratio :
 
 		//return from a moon
 		#MechJeb_return_title = return from a moon
 		#MechJeb_return_label1 = Approximate final periapsis:
 		#MechJeb_return_label2 = Schedule the burn at the next return window.
-		#MechJeb_return_errormsg_1 = Warning: Recommend starting moon returns from a near-circular orbit (eccentricity < 0.2). Planned return is starting from an orbit with eccentricity 
-		#MechJeb_return_errormsg_2 = and so may not be accurate.
-		#MechJeb_return_Exception = is not orbiting another body you could return to.
+		#MechJeb_return_errormsg = Warning: Recommend starting moon returns from a near-circular orbit (eccentricity < 0.2). Planned return is starting from an orbit with eccentricity <<1>> and so may not be accurate.
+		#MechJeb_return_Exception = <<1>> is not orbiting another body you could return to.
 
 		//transfer to another planet
 		#MechJeb_transfer_title = transfer to another planet
@@ -219,7 +217,7 @@ Localization
 
 		#MechJeb_transfer_Exception4 =  an interplanetary transfer from within <<1>>'s sphere of influence must target a body that orbits <<2>>'s parent, <<3>>.
 
-		#MechJeb_transfer_errormsg1 = Warning: target's orbital plane is at a <<1>> º angle to <<2>> 's orbital plane (recommend at most 30º). Planned interplanetary transfer may not intercept target properly."
+		#MechJeb_transfer_errormsg1 = Warning: target's orbital plane is at a <<1>> º angle to <<2>> 's orbital plane (recommend at most 30º). Planned interplanetary transfer may not intercept target properly.
 		
 		#MechJeb_transfer_errormsg2 = Warning: Recommend starting interplanetary transfers from  <<1>> from an orbit in the same plane as <<2>>'s orbit around <<3>>. Starting orbit around <<4>> is inclined <<5>>º with respect to <<6>>'s orbit around <<7>> (recommend < 10º). Planned transfer may not intercept target properly."
 
@@ -406,6 +404,7 @@ Localization
 		#MechJeb_Ascent_msg3 = Launching to rendezvous
 
 	//Attitude Adjustment
+	//CoM->Center of Mass CoL->Center of lift CoT->Center of thrust
 		#MechJeb_AttitudeAdjust_title = Attitude Adjustment
 		#MechJeb_AttitudeAdjust_checkbox1 = RCS auto mode
 		#MechJeb_AttitudeAdjust_checkbox2 = MJAttitudeController
@@ -619,6 +618,16 @@ Localization
 
 		#MechJeb_RZauto_button1 = Engage autopilot
 		#MechJeb_RZauto_button2 = Disengage autopilot 
+
+		#MechJeb_RZauto_statu1 = Successful rendezvous
+		#MechJeb_RZauto_statu2 = Within <<1>>m: matching velocities.
+		#MechJeb_RZauto_statu3 = Planning to match velocities at closest approach.
+		#MechJeb_RZauto_statu4 = Close to target: plotting intercept
+		#MechJeb_RZauto_statu5 = On intercept course. Planning to match velocities at closest approach.
+		#MechJeb_RZauto_statu6 = Planning Hohmann transfer for intercept after <<1>> phasing orbits.
+		#MechJeb_RZauto_statu7 = Next intercept window would be <<1>> orbits away,which is more than the maximum of <<2>> phasing orbits. Increasing phasing rate by establishing new phasing orbit at <<3>>m
+		#MechJeb_RZauto_statu8 = Circularizing.
+		#MechJeb_RZauto_statu9 = Matching planes.
 
 	//Rendezvous Planner
 		#MechJeb_RZplan_title = Rendezvous Planner
@@ -951,10 +960,12 @@ Localization
 		#MechJeb_InfoItems_velocity = Target-relative velocity:
 		#MechJeb_InfoItems_CopytoClipboard = Copy Lat/Lon/Alt to Clipboard
 
-		#MechJeb_InfoItems_VesselSituation1 = Flying over\u0020
-		#MechJeb_InfoItems_VesselSituation2 = Upper atmosphere of 
-		#MechJeb_InfoItems_VesselSituation3 = Space just above 
-		#MechJeb_InfoItems_VesselSituation4 = Space high over 
+		#MechJeb_InfoItems_VesselSituation1 = Flying over <<1>>
+		#MechJeb_InfoItems_VesselSituation2 = Upper atmosphere of <<1>>
+		#MechJeb_InfoItems_VesselSituation3 = Space just above <<1>>
+		#MechJeb_InfoItems_VesselSituation4 = Space high over <<1>>
+		#MechJeb_InfoItems_VesselSituation5 = 's surface	//Like "Kerbin's surface"
+		#MechJeb_InfoItems_VesselSituation6 = 's oceans		//Like "kerbin's oceans"
 
 		#MechJeb_InfoItems_StatsColumn0 = Stage
 		#MechJeb_InfoItems_StatsColumn1 = Start Mass
@@ -1037,5 +1048,22 @@ Localization
 		
 		#MechJeb_Actiongroup_label1 = Toggle action group
 
+		#MechJeb_Ascent_checkbox21 = Support hotstaging
+		#MechJeb_Ascent_label38 = Stage fairings when:
+		#MechJeb_Ascent_label39 = dynamic pressure
+		#MechJeb_Ascent_label40 = altitude
+		#MechJeb_Ascent_label41 = aerothermal flux
+		#MechJeb_Ascent_label42 = Stop at stage #
+		#MechJeb_Ascent_label43 = lead time
+		#MechJeb_Ascent_label44 = Clamp AutoStage Thrust 
+		#MechJeb_Ascent_status9 = Autostaging off
+		#MechJeb_Ascent_status10 = Will autostage next stage only
+		#MechJeb_Ascent_status11 = Autostaging until stage #
+		#MechJeb_Ascent_status12 = Awaiting liftoff
+		#MechJeb_Ascent_status13 = Vertical ascent <<1>>m/s to go
+		#MechJeb_Ascent_status14 = Gravity Turn <<1>>° to guidance
+		#MechJeb_Ascent_status15 = Pitch program <<1>>° to guidance
+		#MechJeb_Ascent_status16 = WARNING: Unstable Guidance
+		#MechJeb_Ascent_status17 = Stable Guidance
 	}
 }
